--- a/slickback/index.html
+++ b/slickback/index.html
@@ -15,7 +15,7 @@
 
     <p>
     <a href="http://github.com/teleological/slickback">Slickback</a>
-    adapts 
+    is a javascript library that adapts 
     <a href="http://documentcloud.github.com/backbone/">Backbone</a>
     collections to work with
     <a href="http://github.com/mleibman/SlickGrid">SlickGrid</a>,
@@ -34,6 +34,9 @@
     Slickback, like Backbone and SlickGrid, is released under the
     MIT license. Source code, documentation and issue tracking is hosted at
     <a href="http://github.com/teleological/slickback">Github</a>.
+    Slickback is also available as an
+    <a href="http://search.npmjs.org/#/slickback">npm module</a>
+    for use with node-js.
     </p>
 
     <div id="example">
