--- a/slickback/index.html
+++ b/slickback/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-    <title>Slickback example</title>
+    <title>Slickback: Integrating Backbone and Slickgrid</title>
     <link rel="stylesheet" href="./vendor/slickgrid-1.4.3/css/slick.grid.css"/>
     <link rel="stylesheet" href="./vendor/slickgrid-1.4.3/css/slick.pager.css"/>
     <link rel="stylesheet" href="./vendor/jquery-ui-1.8.14/css/smoothness/jquery-ui-1.8.14.custom.css"/>
