--- a/slickback/index.html
+++ b/slickback/index.html
@@ -14,7 +14,7 @@
     <h2>Slickback</h2>
 
     <p>
-    <a href="http://github.com/teleological/slickback">Slickback</a>
+    <a href="http://github.com/teleological/slickback/wiki">Slickback</a>
     is a javascript library that adapts 
     <a href="http://documentcloud.github.com/backbone/">Backbone</a>
     collections to work with
@@ -33,7 +33,7 @@
     <p>
     Slickback, like Backbone and SlickGrid, is released under the
     MIT license. Source code, documentation and issue tracking is hosted at
-    <a href="http://github.com/teleological/slickback">Github</a>.
+    <a href="http://github.com/teleological/slickback">github</a>.
     Slickback is also available as an
     <a href="http://search.npmjs.org/#/slickback">npm module</a>
     for use with node-js.
