Revise Slickback example for v0.2.0

--- a/slickback/test.html
+++ b/slickback/test.html
@@ -9,9 +9,12 @@
 
   <!-- Jasmine -->
   <script type="text/javascript" src="./vendor/jasmine-1.0.2/jasmine.js"></script>
+  <script type="text/javascript" src="test/equality_helper.js"></script>
   <script type="text/javascript" src="./vendor/jasmine-1.0.2/jasmine-html.js"></script>
 
   <!-- Dependencies -->
+  <script type="text/javascript" src="./vendor/jquery-1.6.2.js"></script>
+  <script type="text/javascript" src="test/spy_on_jquery.js"></script>
   <script type="text/javascript" src="./vendor/underscore-1.1.7/underscore.js"></script>
   <script type="text/javascript" src="./vendor/backbone-0.5.3/backbone.js"></script>
 
@@ -26,7 +29,16 @@
   <script type="text/javascript" src="test/pager_adaptor_mixin_spec.js"></script>
   <script type="text/javascript" src="test/event_translation_mixin_spec.js"></script>
   <script type="text/javascript" src="test/collection_adaptor_mixin_spec.js"></script>
+  <script type="text/javascript" src="test/collection_spec.js"></script>
+  <script type="text/javascript" src="test/scoped_collection_spec.js"></script>
   <script type="text/javascript" src="test/paginated_collection_spec.js"></script>
+  <script type="text/javascript" src="test/choice_formatter_spec.js"></script>
+  <script type="text/javascript" src="test/number_formatter_spec.js"></script>
+  <script type="text/javascript" src="test/editor_mixin_spec.js"></script>
+  <script type="text/javascript" src="test/text_cell_editor_spec.js"></script>
+  <script type="text/javascript" src="test/integer_cell_editor_spec.js"></script>
+  <script type="text/javascript" src="test/number_cell_editor_spec.js"></script>
+  <script type="text/javascript" src="test/dropdown_cell_editor_spec.js"></script>
   <script type="text/javascript" src="test/backbone_model_formatter_factory_spec.js"></script>
 </head>
 
