--- a/slickback/index.html
+++ b/slickback/index.html
@@ -33,9 +33,10 @@
     <a href="http://github.com/mleibman/SlickGrid">SlickGrid</a>,
     a jQuery-backed datagrid.
 
-    Extensions include support for paginating collections 
-    and composing filtered queries using an interface modeled 
-    after Ruby on Rails ActiveRecord's "named scopes".
+    Extensions include support for paginating collections, 
+    composing filtered queries using an interface modeled 
+    after Ruby on Rails ActiveRecord's "named scopes", 
+    and displaying precision numerical data.
 
     This page embeds an example using a simulated datasource
     that supports pagination and sorting. A suite of browser-based
