Highlight compatibility with SlickGrid v2.0

--- a/slickback/index.html
+++ b/slickback/index.html
@@ -25,6 +25,8 @@
 
     <h2>Slickback</h2>
 
+    <h4>Now works with SlickGrid v2.0</h4>
+
     <p>
     <a href="http://github.com/teleological/slickback/wiki">Slickback</a>
     is a javascript library that adapts 
